force-app/main/default/objects/Broker__c/fields/Aadhar_Card__c.field-meta.xml
<CustomField>
    <fullName>Aadhar_Card__c</fullName>
    <label>Aadhar Card</label>
    <length>20</length>
    <type>Text</type>
</CustomField>