force-app/main/default/objects/Broker__c/fields/Activate_CP_Portal__c.field-meta.xml
<CustomField>
    <fullName>Activate_CP_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate CP Portal</label>
    <type>Checkbox</type>
</CustomField>