force-app/main/default/objects/Broker__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address (less than 80 charss)</label>
    <type>TextArea</type>
</CustomField>