force-app/main/default/objects/Broker__c/fields/AOP_Commitment__c.field-meta.xml
<CustomField>
    <fullName>AOP_Commitment__c</fullName>
    <label>AOP Commitment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15-25</fullName>
            </value>
            <value>
                <fullName>26-50</fullName>
            </value>
            <value>
                <fullName>51-75</fullName>
            </value>
            <value>
                <fullName>76-100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>