force-app/main/default/objects/Broker__c/fields/AOP_Signed_Category__c.field-meta.xml
<CustomField>
    <fullName>AOP_Signed_Category__c</fullName>
    <label>AOP Signed Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>