force-app/main/default/objects/Broker__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Approved By L1</fullName>
            </value>
            <value>
                <fullName>Approved By L2</fullName>
            </value>
            <value>
                <fullName>Rejected By L1</fullName>
            </value>
            <value>
                <fullName>Rejected By L2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>