force-app/main/default/objects/Broker__c/fields/Approver_L1__c.field-meta.xml
<CustomField>
    <fullName>Approver_L1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver L1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Channel_Partners</relationshipName>
    <type>Lookup</type>
</CustomField>