force-app/main/default/objects/Broker__c/fields/Are_you_NRI__c.field-meta.xml
<CustomField>
    <fullName>Are_you_NRI__c</fullName>
    <label>Are you NRI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>