force-app/main/default/objects/Broker__c/fields/Broker_Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Broker_Pan_No__c</fullName>
    <label>Channel Partner Pan No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>