force-app/main/default/objects/Broker__c/fields/Broker_Type__c.field-meta.xml
<CustomField>
    <fullName>Broker_Type__c</fullName>
    <label>Channel Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Institutional</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>