force-app/main/default/objects/Broker__c/fields/CC_Scheduled_Exam_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Scheduled_Exam_Date__c</fullName>
    <label>CC Scheduled Exam Date</label>
    <type>Date</type>
</CustomField>