force-app/main/default/objects/Broker__c/fields/CC_Valid_till__c.field-meta.xml
<CustomField>
    <fullName>CC_Valid_till__c</fullName>
    <label>CC Valid till</label>
    <type>Date</type>
</CustomField>