force-app/main/default/objects/Broker__c/fields/Cheque_DD_Favouring_Name__c.field-meta.xml
<CustomField>
    <fullName>Cheque_DD_Favouring_Name__c</fullName>
    <label>Cheque/DD Favouring Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>