force-app/main/default/objects/Broker__c/fields/Company_Name_As_per_RERA__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_As_per_RERA__c</fullName>
    <label>Company Name (As per RERA)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>