force-app/main/default/objects/Broker__c/fields/Country_2__c.field-meta.xml
<CustomField>
    <fullName>Country_2__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>