force-app/main/default/objects/Broker__c/fields/CP_External_Id__c.field-meta.xml
<CustomField>
    <fullName>CP_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>CP External Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>