force-app/main/default/objects/Broker__c/fields/CP_Speciality__c.field-meta.xml
<CustomField>
    <fullName>CP_Speciality__c</fullName>
    <label>CP Speciality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Land Acquisitions</fullName>
            </value>
            <value>
                <fullName>Primary Sales</fullName>
            </value>
            <value>
                <fullName>Redevelopment</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Secondary Sales</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>