force-app/main/default/objects/Broker__c/fields/Data_Error_Fixed__c.field-meta.xml
<CustomField>
    <fullName>Data_Error_Fixed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Error Fixed</label>
    <type>Checkbox</type>
</CustomField>