force-app/main/default/objects/Broker__c/fields/days_from_creation__c.field-meta.xml
<CustomField>
    <fullName>days_from_creation__c</fullName>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># days from creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>