force-app/main/default/objects/Broker__c/fields/Developers_Worked_For__c.field-meta.xml
<CustomField>
    <fullName>Developers_Worked_For__c</fullName>
    <label>Developers Worked For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aadi Properties</fullName>
            </value>
            <value>
                <fullName>Acme</fullName>
            </value>
            <value>
                <fullName>Adani Realty</fullName>
            </value>
            <value>
                <fullName>Adhiraj construction</fullName>
            </value>
            <value>
                <fullName>Ajmera</fullName>
            </value>
            <value>
                <fullName>Akshar group</fullName>
            </value>
            <value>
                <fullName>Arkade Group</fullName>
            </value>
            <value>
                <fullName>Chandak</fullName>
            </value>
            <value>
                <fullName>Damji Shamji Shah</fullName>
            </value>
            <value>
                <fullName>Dosti Group</fullName>
            </value>
            <value>
                <fullName>Ekta world</fullName>
            </value>
            <value>
                <fullName>Godrej Properties</fullName>
            </value>
            <value>
                <fullName>Hiranandani Developers</fullName>
            </value>
            <value>
                <fullName>Hubtown</fullName>
            </value>
            <value>
                <fullName>JP Infra</fullName>
            </value>
            <value>
                <fullName>Kabra developer</fullName>
            </value>
            <value>
                <fullName>Kalpataru</fullName>
            </value>
            <value>
                <fullName>Kanakia</fullName>
            </value>
            <value>
                <fullName>Koltepatil developer</fullName>
            </value>
            <value>
                <fullName>K Raheja Corp</fullName>
            </value>
            <value>
                <fullName>L&amp;T Realty</fullName>
            </value>
            <value>
                <fullName>Lodha Group</fullName>
            </value>
            <value>
                <fullName>Mahindra Lifespaces</fullName>
            </value>
            <value>
                <fullName>Marathon Realty</fullName>
            </value>
            <value>
                <fullName>Oberoi Realty</fullName>
            </value>
            <value>
                <fullName>Ornate Universal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paradise group</fullName>
            </value>
            <value>
                <fullName>Piramal Realty</fullName>
            </value>
            <value>
                <fullName>Puranik Builders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>