force-app/main/default/objects/Broker__c/fields/Dialing_Country_Code1__c.field-meta.xml
<CustomField>
    <fullName>Dialing_Country_Code1__c</fullName>
    <label>Dialing Country Code1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+91</fullName>
            </value>
            <value>
                <fullName>+93</fullName>
            </value>
            <value>
                <fullName>+213</fullName>
            </value>
            <value>
                <fullName>+376</fullName>
            </value>
            <value>
                <fullName>+244</fullName>
            </value>
            <value>
                <fullName>+355</fullName>
            </value>
            <value>
                <fullName>+971</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>