force-app/main/default/objects/Broker__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <label>Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-1 yrs</fullName>
            </value>
            <value>
                <fullName>1-5 yrs</fullName>
            </value>
            <value>
                <fullName>5-10 yrs</fullName>
            </value>
            <value>
                <fullName>10-15 yrs</fullName>
            </value>
            <value>
                <fullName>15-20 yrs</fullName>
            </value>
            <value>
                <fullName>20+ yrs</fullName>
            </value>
            <value>
                <fullName>0-1, 1-5, 5-10, 10-15, 15-20, 20+</fullName>
                <isActive>false</isActive>
                <label>0-1, 1-5, 5-10, 10-15, 15-20, 20+</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>