force-app/main/default/objects/Broker__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <label>Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Rentals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>