force-app/main/default/objects/Broker__c/fields/House_Flat_Company__c.field-meta.xml
<CustomField>
    <fullName>House_Flat_Company__c</fullName>
    <label>House/Flat/Company</label>
    <length>20</length>
    <type>Text</type>
</CustomField>