force-app/main/default/objects/Broker__c/fields/IS_IGST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>IS_IGST_Applicable__c</fullName>
    <label>IS IGST Applicable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>