force-app/main/default/objects/Broker__c/fields/Is_NRI_CP__c.field-meta.xml
<CustomField>
    <fullName>Is_NRI_CP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NRI CP</label>
    <type>Checkbox</type>
</CustomField>