force-app/main/default/objects/Broker__c/fields/Is_T_C_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Is_T_C_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is T&amp;C Accepted</label>
    <type>Checkbox</type>
</CustomField>