force-app/main/default/objects/Broker__c/fields/Latest_CC_Upload_Processed__c.field-meta.xml
<CustomField>
    <fullName>Latest_CC_Upload_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest CC Upload Processed</label>
    <type>Checkbox</type>
</CustomField>