force-app/main/default/objects/Broker__c/fields/Latest_CC_Upload_Status__c.field-meta.xml
<CustomField>
    <fullName>Latest_CC_Upload_Status__c</fullName>
    <label>Latest CC Upload Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approval Pending</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>