force-app/main/default/objects/Broker__c/fields/Lead_Generation_Methodology__c.field-meta.xml
<CustomField>
    <fullName>Lead_Generation_Methodology__c</fullName>
    <label>Lead Generation Methodology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Digital platform i.e. Facebook</fullName>
            </value>
            <value>
                <fullName>Digital platform i.e. LinkedIn</fullName>
            </value>
            <value>
                <fullName>Digital platform i.e. Microsite</fullName>
            </value>
            <value>
                <fullName>Emailer</fullName>
            </value>
            <value>
                <fullName>Other sources</fullName>
            </value>
            <value>
                <fullName>Paper Inserts</fullName>
            </value>
            <value>
                <fullName>Property Portals</fullName>
            </value>
            <value>
                <fullName>Relationshp i.e.referrals</fullName>
            </value>
            <value>
                <fullName>Telecalling Database</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>