force-app/main/default/objects/Broker__c/fields/Legal_Form__c.field-meta.xml
<CustomField>
    <fullName>Legal_Form__c</fullName>
    <label>Legal Form</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Corporation</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>P.l.c.</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Commercial Partnership Limited by Shares</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>P.l.c.&amp; Co LP</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Gen.Partnership</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Private Company</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Co., Ltd.</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Proprietary</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Pvt Ltd</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>