force-app/main/default/objects/Broker__c/fields/NAME_FIRST__c.field-meta.xml
<CustomField>
    <fullName>NAME_FIRST__c</fullName>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>