force-app/main/default/objects/Broker__c/fields/NAME_LAST__c.field-meta.xml
<CustomField>
    <fullName>NAME_LAST__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>