force-app/main/default/objects/Broker__c/fields/NAME_MIDDLE__c.field-meta.xml
<CustomField>
    <fullName>NAME_MIDDLE__c</fullName>
    <label>Middle Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>