force-app/main/default/objects/Broker__c/fields/Phone_With_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Phone_With_Country_Code__c</fullName>
    <label>Phone (With Country Code)</label>
    <type>Phone</type>
</CustomField>