force-app/main/default/objects/Broker__c/fields/Place_of_Supply__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Supply__c</fullName>
    <label>Place of Supply</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>Jammu and Kashmir</fullName>
            </value>
            <value>
                <fullName>Himachal Pradesh</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>CHANDIGARH</fullName>
            </value>
            <value>
                <fullName>UTTARAKHAND</fullName>
            </value>
            <value>
                <fullName>HARYANA</fullName>
            </value>
            <value>
                <fullName>DELHI</fullName>
            </value>
            <value>
                <fullName>RAJASTHAN</fullName>
            </value>
            <value>
                <fullName>UTTAR PRADESH</fullName>
            </value>
            <value>
                <fullName>BIHAR</fullName>
            </value>
            <value>
                <fullName>SIKKIM</fullName>
            </value>
            <value>
                <fullName>ARUNACHAL PRADESH</fullName>
            </value>
            <value>
                <fullName>NAGALAND</fullName>
            </value>
            <value>
                <fullName>MANIPUR</fullName>
            </value>
            <value>
                <fullName>MIZORAM</fullName>
            </value>
            <value>
                <fullName>TRIPURA</fullName>
            </value>
            <value>
                <fullName>MEGHALAYA</fullName>
            </value>
            <value>
                <fullName>ASSAM</fullName>
            </value>
            <value>
                <fullName>WEST BENGAL</fullName>
            </value>
            <value>
                <fullName>JHARKHAND</fullName>
            </value>
            <value>
                <fullName>ODISHA</fullName>
            </value>
            <value>
                <fullName>CHATTISGARH</fullName>
            </value>
            <value>
                <fullName>MADHYA PRADESH</fullName>
            </value>
            <value>
                <fullName>GUJARAT</fullName>
            </value>
            <value>
                <fullName>DADRA AND NAGAR HAVELI AND DAMAN AND DIU (NEWLY MERGED UT)</fullName>
            </value>
            <value>
                <fullName>ANDHRA PRADESH(BEFORE DIVISION)</fullName>
            </value>
            <value>
                <fullName>KARNATAKA</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
            <value>
                <fullName>LAKSHADWEEP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>