force-app/main/default/objects/Broker__c/fields/RERA_Valid_till__c.field-meta.xml
<CustomField>
    <fullName>RERA_Valid_till__c</fullName>
    <label>RERA Valid till</label>
    <type>Date</type>
</CustomField>