force-app/main/default/objects/Broker__c/fields/RW_Broker_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_Broker_Number__c</fullName>
    <displayFormat>BR-{00000}</displayFormat>
    <label>Channel Partner Unique ID</label>
    <type>AutoNumber</type>
</CustomField>