force-app/main/default/objects/Broker__c/fields/RW_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_GST_Number__c</fullName>
    <label>GST Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>