force-app/main/default/objects/Broker__c/fields/RW_IRIS_Sync__c.field-meta.xml
<CustomField>
    <fullName>RW_IRIS_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IRIS Sync</label>
    <type>Checkbox</type>
</CustomField>