force-app/main/default/objects/Broker__c/fields/RW_Is_CC_Applicable__c.field-meta.xml
<CustomField>
    <fullName>RW_Is_CC_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is CC Applicable</label>
    <type>Checkbox</type>
</CustomField>